# eg25-manager-1

./: .gitignore  README.md  meson.build
data/: meson.build  pine64,pinephone-1.0.toml  pine64,pinephone-1.1.toml  pine64,pinephone-1.2.toml
src/: at.c  at.h  gpio.c  gpio.h  manager.c  manager.h  meson.build  mm-iface.c  mm-iface.h  ofono-iface.c  ofono-iface.h  suspend.c  suspend.h  udev.c  udev.h
src/libgdbofono/: meson.build
udev/: 80-modem-eg25.rules  configure-usb-modem  eg25-configure-usb  meson.build
